istio/rjm-gateway-sv.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: react-java-routing
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service.default.svc.cluster.local
        port:
          number: 8080

  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service.default.svc.cluster.local
        port:
          number: 3000
